# qtools-gtk

./: .gitignore  Cargo.toml  build.rs
resources/: gresource.xml  gschemas.compiled  main_window.cmb  main_window.ui  shortcuts.ui  top.qinhuajun.app.gschema.xml
src/: app.rs  main.rs  style.css
src/ai_chat/: mod.rs
src/components/: mod.rs
src/components/ai_chat/: mod.rs
src/components/entity_list/: mod.rs
src/components/main_window/: content.rs  menu.rs  mod.rs  sidebar.rs  toolbar.rs  toolbar_config.rs
src/components/screen_shot/: mod.rs
src/components/tutorial/: mod.rs
src/components/welcome/: mod.rs
src/main_window/: about.rs  content.rs  imp.rs  main_window.blp  menu.rs  mod.rs  sidebar.rs  toolbar.rs
