[package]
name = "qtools"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.8.0", package = "libadwaita", features = ["v1_7"] }
config = "0.15.13"
gtk = { version = "0.10.0", package = "gtk4", features = ["v4_18"] }
gtk-blueprint = "0.2.0"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }

[build-dependencies]
glib-build-tools = "0.21.0"
