[package]
name = "qtools"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.8.0", package = "libadwaita", features = ["v1_7"] }
gtk = { version = "0.10.0", package = "gtk4", features = ["v4_18"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.5"
once_cell = "1.21.3"
futures-channel = "0.3.31"
sourceview5 = { version = "0.10.0" }
plotters = { version = "0.3.7" }

[build-dependencies]
glib-build-tools = "0.21.0"
anyhow = "1.0"